--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -45,12 +45,31 @@
  *   in custom container, badges, etc.
  * -------------------------------------------------------------------------- */
 
+/**
+ * TEXT FONT
+ * -------------------------------------------------------------------------- */
+
+ @font-face {
+  font-family: 'Kimberley Bl';
+  src: url('/fonts/Kimberley Bl.otf') format('truetype');
+}
+
+.title-font {
+  font-family: 'Kimberley Bl';
+}
+
+.header-font {
+  color: red;
+  font-family: 'Kimberley Bl';
+}
+/* sfarsit text font */
+
 :root {
-  --vp-home-hero-name-color: transparent;
+  /* --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #ab2e22 30%, #e82310);
 
   --vp-home-hero-image-background-image: linear-gradient(-45deg, #ab2e22 50%, #e82310 50%);
-  --vp-home-hero-image-filter: blur(20px);
+  --vp-home-hero-image-filter: blur(20px); */
 
   --vp-c-default-1: var(--vp-c-gray-1);
   --vp-c-default-2: var(--vp-c-gray-2);
