--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -473,17 +473,18 @@ body {
 
 .howtocard .button-container button {
   padding: 10px 20px;
-  background-color: #ff0000;
+  background: linear-gradient(45deg, #ff0000, #000000);
   color: rgb(255, 255, 255);
   border: none;
-  border-radius: 5px;
+  border-radius: 20px;
   cursor: pointer;
   font-size: 1rem;
-  transition: background-color 0.3s ease;
+  transition: background 0.3s ease, transform 0.2s ease;
 }
 
 .howtocard .button-container button:hover {
-  background-color: #e21203;
+  background: linear-gradient(45deg, #e21203, #1a1a1a);
+  transform: scale(1.05);
 }
 
 /* Imagini mici în colțul dreapta sus */
